wallpaper css tweaks feat(wallpaper-css): wallpaper css size fix on landscape mode feat(wallpaper-css): fix search bar width on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ body
 
     opacity: .6;
     background-position: center !important;
-    background-size: auto 100% !important;
+    background-size: cover  !important;
     background-repeat: no-repeat !important;
 
 }
@@ -55,14 +55,14 @@ body
 }
 
 #searchAndSuggestions{
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 #searchBarContainer{
     position: relative;
-    width: 50vw;
-    min-width: 500px;
+    min-width: 50vw;
     height: 50px;
 
     display: flex;
@@ -71,6 +71,11 @@ body
     margin-bottom: 10px;
 
 }
+.searchBarContainer_withInput{
+    min-width:  80vw !important;
+
+}
+
 #searchButton{
     position: absolute;
     right: 5px;
@@ -171,7 +176,3 @@ body
 
 }
 
-.searchBarWithInput{
-    min-width:  80vw !important;
-
-}
